Remove pageNo from neighbor query, add kbName, handle client disconnect